--- a/css/style.css
+++ b/css/style.css
@@ -164,8 +164,9 @@ a{
 .card-subtitle {
   font-weight: 700;
   text-align: center;
-  font-size: 13px;
-  margin-bottom: 8px;
+  animation: fadeIn 2.8s both;
+  font-size: 15px;
+  margin-bottom: 7px;
 }
 
 .card-content {
@@ -322,10 +323,10 @@ a{
 }
 
 .card-item-desc {
-  font-size: 13px;
+  font-size: 15px;
   color: #6f6f7b;
-  line-height: 1.5;
-  font-family: "DM Sans", sans-serif;
+  line-height: 2.0;
+  font-family: "Jost", sans-serif;
 }
 
 .card-contact {
@@ -365,4 +366,23 @@ a{
   font-weight: 500;
   font-family: "Jost", sans-serif;
   transition: 0.3s;
+}
+
+footer p {
+	border: 0;
+  outline: none;
+  background: linear-gradient(to right, rgba(83, 200, 239, 0.8) 0%, rgba(81, 106, 204, 0.8) 96%);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.15);
+  color: #fff;
+  padding: 12px 16px;
+  width: 100%;
+  border-radius: 50px;
+  margin-top: 25px;
+  cursor: pointer;
+  font-size: 14px;
+  font-weight: 500;
+  font-family: "Jost", sans-serif;
+  transition: 0.3s;
+   display: block;
+  animation: fadeIn 4.0s both;
 }
